--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.6",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-gesture-handler": "^1.5.3",
+    "react-native-safe-area-context": "^0.6.2",
     "react-native-svg": "^9.13.6",
+    "react-navigation": "^4.0.10",
+    "react-navigation-stack": "^2.0.15",
     "typescript": "^3.7.3"
   },
   "devDependencies": {
